--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,11 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 **/.idea
-*.jar
+
+**/.idea
+
+# Ignore Java generated files in all directories
+**/*.class
+**/*.jar
+
+**/.idea
