--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/WebSocket/WebSocket.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/WebSocket/WebSocket.asmdef
@@ -1,11 +1,9 @@
 {
-    "name": "AnchorSystem",
+    "name": "WebSocket",
     "rootNamespace": "",
     "references": [
-        "Scripts",
-        "Unity.XR.ARFoundation",
-        "Unity.XR.ARSubsystems",
-        "WebSocket"
+        "GUID:ad47d37b55b3cfa4ba4960d7128606d5",
+        "GUID:04376767bc1f3b428aefa3d20743e819"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
