--- a/unity/kuka-ar-unity/Packages/manifest.json
+++ b/unity/kuka-ar-unity/Packages/manifest.json
@@ -1,12 +1,11 @@
 {
   "dependencies": {
-    "com.endel.nativewebsocket": "https://github.com/endel/NativeWebSocket.git#upm",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.ar": "1.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.learn.iet-framework": "3.1.3",
-    "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.visualscripting": "1.8.0",
