fix hierarchy and assembly issues

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/AnchorSystem/Scripts.AnchorSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/AnchorSystem/Scripts.AnchorSystem.asmdef
@@ -5,7 +5,10 @@
         "Scripts",
         "Unity.XR.ARFoundation",
         "Unity.XR.ARSubsystems",
-        "WebSocket"
+        "WebSocket",
+        "Scripts.TrackedRobots",
+        "Scripts.Connectivity",
+        "Scripts.Utils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
