--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
@@ -1,7 +1,11 @@
 {
-    "name": "Scripts",
+    "name": "Scripts.EventSystem",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:ad47d37b55b3cfa4ba4960d7128606d5",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:c33d397f998e1d141b74148276071b9d"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
