--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/RestAPI/Commands/RestAPI.Commands.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/RestAPI/Commands/RestAPI.Commands.asmdef
@@ -2,7 +2,8 @@
     "name": "RestAPI.Commands",
     "rootNamespace": "",
     "references": [
-        "GUID:cb20bccb431e7424e97f83cce3b65bbd"
+        "GUID:cb20bccb431e7424e97f83cce3b65bbd",
+        "GUID:c33d397f998e1d141b74148276071b9d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
