--- a/unity/kuka-ar-unity/Assets/Project/Scripts/ImageSystem/Scripts.ImageSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/ImageSystem/Scripts.ImageSystem.asmdef
@@ -6,7 +6,9 @@
         "GUID:a9420e37d7990b54abdef6688edbe313",
         "GUID:92703082f92b41ba80f0d6912de66115",
         "GUID:eeb86127709eb3b479f586c700f85505",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8"
+        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
+        "GUID:cb20bccb431e7424e97f83cce3b65bbd",
+        "GUID:6fd18166c5e168749998d4dcd345e31d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
