change naming of Http-related classes

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Connectivity.Http.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Connectivity.Http.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "RestAPI",
+    "name": "Connectivity.Http",
     "rootNamespace": "",
     "references": [
         "GUID:c33d397f998e1d141b74148276071b9d"
