--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
@@ -6,7 +6,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c33d397f998e1d141b74148276071b9d",
         "GUID:cb20bccb431e7424e97f83cce3b65bbd",
-        "GUID:6fd18166c5e168749998d4dcd345e31d"
+        "GUID:6fd18166c5e168749998d4dcd345e31d",
+        "GUID:767269c2bcccae44bb11534738dda684"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
