Partial fix for robots bottom nav display after form submissions

--- a/java/kukaComm/pom.xml
+++ b/java/kukaComm/pom.xml
@@ -35,8 +35,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.1.4</version>
 		</dependency>
 
 		<dependency>
