--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Scripts.Connectivity.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Scripts.Connectivity.asmdef
@@ -2,7 +2,8 @@
     "name": "Scripts.Connectivity",
     "rootNamespace": "",
     "references": [
-        "GUID:ad47d37b55b3cfa4ba4960d7128606d5"
+        "GUID:ad47d37b55b3cfa4ba4960d7128606d5",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
