--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
@@ -8,7 +8,8 @@
         "GUID:cb20bccb431e7424e97f83cce3b65bbd",
         "GUID:6fd18166c5e168749998d4dcd345e31d",
         "GUID:767269c2bcccae44bb11534738dda684",
-        "GUID:378bd5616a56dad4f91ebfcbec2194c0"
+        "GUID:378bd5616a56dad4f91ebfcbec2194c0",
+        "GUID:bb05188734a25b149898e54d16dd5dd3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
