MutableImageLib now does not use cached images
AnchorManager calls needed endpoints to get Robots and Configured data

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/AnchorSystem/Scripts.AnchorSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/AnchorSystem/Scripts.AnchorSystem.asmdef
@@ -8,7 +8,9 @@
         "WebSocket",
         "Scripts.TrackedRobots",
         "Scripts.Connectivity",
-        "Scripts.Utils"
+        "Scripts.Utils",
+        "Connectivity.Http",
+        "RestAPI.Commands"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
