--- a/java/kukaComm/src/main/resources/application.properties
+++ b/java/kukaComm/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 desc.location = RobotData/
 img.location = RobotStickers/
 
-spring.datasource.url=jdbc:h2:file:/data/robots
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=kukaComm
-spring.datasource.password=kuka
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## Database access config
+spring.datasource.url=jdbc:mariadb://localhost:3306/robots
+spring.datasource.username=app
+spring.datasource.password=root
 
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=true
+## JPA vendor adapter
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+## Open Session in View
+spring.jpa.open-in-view=false
