Robot not configured UI error fix

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Scripts.EventSystem.asmdef
@@ -10,7 +10,8 @@
         "GUID:767269c2bcccae44bb11534738dda684",
         "GUID:378bd5616a56dad4f91ebfcbec2194c0",
         "GUID:bb05188734a25b149898e54d16dd5dd3",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8"
+        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
+        "GUID:e07dd999e4ff2bc4ab6caf8768749fb6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
