--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Requests/RestAPI.Commands.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Requests/RestAPI.Commands.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:cb20bccb431e7424e97f83cce3b65bbd",
         "GUID:c33d397f998e1d141b74148276071b9d",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8"
+        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
+        "GUID:e07dd999e4ff2bc4ab6caf8768749fb6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
