Pipeline config init

--- a/java/kukaComm/src/test/resources/application.properties
+++ b/java/kukaComm/src/test/resources/application.properties
@@ -2,14 +2,14 @@ desc.location = RobotDataTesting/
 img.location = RobotStickersTesting/
 
 ## Database access config
-spring.datasource.url=jdbc:mariadb://localhost:3306/robots
+spring.datasource.url=jdbc:mariadb://localhost:3306/robots_test
 spring.datasource.username=app
 spring.datasource.password=root
 
 ## JPA vendor adapter
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 
 ## Open Session in View
