--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Controllers/ServerConfig/ServerConfigControllers.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Controllers/ServerConfig/ServerConfigControllers.asmdef
@@ -1,12 +1,12 @@
 {
-    "name": "RestAPI.Commands",
+    "name": "ServerConfigControllers",
     "rootNamespace": "",
     "references": [
+        "GUID:421539bb9883d9a4889b17e6e667fe14",
+        "GUID:6fd18166c5e168749998d4dcd345e31d",
+        "GUID:4bdc567feb2d2804fbc580ec1a3c75aa",
         "GUID:cb20bccb431e7424e97f83cce3b65bbd",
-        "GUID:c33d397f998e1d141b74148276071b9d",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
-        "GUID:e07dd999e4ff2bc4ab6caf8768749fb6",
-        "GUID:0ca7c7af0bf89c748b02f31b590863ea"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
