--- a/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Services/Menu/MenuService.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/EventSystem/Services/Menu/MenuService.asmdef
@@ -1,12 +1,10 @@
 {
-    "name": "RestAPI.Commands",
+    "name": "MenuServices",
     "rootNamespace": "",
     "references": [
-        "GUID:cb20bccb431e7424e97f83cce3b65bbd",
         "GUID:c33d397f998e1d141b74148276071b9d",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
-        "GUID:e07dd999e4ff2bc4ab6caf8768749fb6",
-        "GUID:0ca7c7af0bf89c748b02f31b590863ea"
+        "GUID:4bdc567feb2d2804fbc580ec1a3c75aa",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
