--- a/unity/kuka-ar-unity/Assets/Project/Scripts/TrackedRobots/Scripts.TrackedRobots.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/TrackedRobots/Scripts.TrackedRobots.asmdef
@@ -5,7 +5,8 @@
         "GUID:c33d397f998e1d141b74148276071b9d",
         "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
         "GUID:13a966f7686bb7d41932fc9bdcd050ab",
-        "GUID:ad47d37b55b3cfa4ba4960d7128606d5"
+        "GUID:ad47d37b55b3cfa4ba4960d7128606d5",
+        "GUID:36493f3be0b85d94f80c3409db6f29d6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
