--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Extensions/Popup/Popup.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Extensions/Popup/Popup.asmdef
@@ -1,14 +1,11 @@
 {
-    "name": "RestAPI.Commands",
+    "name": "Popup",
     "rootNamespace": "",
     "references": [
-        "GUID:cb20bccb431e7424e97f83cce3b65bbd",
         "GUID:c33d397f998e1d141b74148276071b9d",
-        "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
-        "GUID:e07dd999e4ff2bc4ab6caf8768749fb6",
-        "GUID:0ca7c7af0bf89c748b02f31b590863ea",
-        "GUID:e84ed3b3f5c74674e9a2de2c6a3bbc51",
-        "GUID:ac088d4b0cc88eb4b87033f1180e9c25"
+        "GUID:fe2c0d3364fbf61409b1817a1e043ed7",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:cb20bccb431e7424e97f83cce3b65bbd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
