Code refactor and cleanup

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Requests/RestAPI.Commands.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Http/Requests/RestAPI.Commands.asmdef
@@ -8,7 +8,8 @@
         "GUID:e07dd999e4ff2bc4ab6caf8768749fb6",
         "GUID:0ca7c7af0bf89c748b02f31b590863ea",
         "GUID:e84ed3b3f5c74674e9a2de2c6a3bbc51",
-        "GUID:ac088d4b0cc88eb4b87033f1180e9c25"
+        "GUID:ac088d4b0cc88eb4b87033f1180e9c25",
+        "GUID:670af7a17d9f798459f3c1687b34c013"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
