--- a/java/kukaComm/src/test/resources/application.properties
+++ b/java/kukaComm/src/test/resources/application.properties
@@ -2,15 +2,19 @@ desc.location = RobotDataTesting/
 img.location = RobotStickersTesting/
 
 ## Database access config
-spring.datasource.url=jdbc:mariadb://localhost:3306/robots_test
-spring.datasource.username=app
-spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=kukaComm
+spring.datasource.password=kuka
+
 
 ## JPA vendor adapter
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
 
 ## Open Session in View
 spring.jpa.open-in-view=false
