--- a/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Extensions/Popup/Popup.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/Connectivity/Extensions/Popup/Popup.asmdef
@@ -5,7 +5,8 @@
         "GUID:c33d397f998e1d141b74148276071b9d",
         "GUID:fe2c0d3364fbf61409b1817a1e043ed7",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:cb20bccb431e7424e97f83cce3b65bbd"
+        "GUID:cb20bccb431e7424e97f83cce3b65bbd",
+        "GUID:4bdc567feb2d2804fbc580ec1a3c75aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
