--- a/java/kukaComm/src/main/resources/application.properties
+++ b/java/kukaComm/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-desc.location = ../RobotData/
-img.location = ../RobotStickers/
+desc.location = RobotData/
+img.location = RobotStickers/
 
 spring.profiles.active=h2
