make basePoint a child of anchor point

--- a/unity/kuka-ar-unity/Assets/Project/Scripts/TrackedRobots/Scripts.TrackedRobots.asmdef
+++ b/unity/kuka-ar-unity/Assets/Project/Scripts/TrackedRobots/Scripts.TrackedRobots.asmdef
@@ -6,7 +6,8 @@
         "GUID:a878be4ce749fb645a1f59bb8f9b8ce8",
         "GUID:13a966f7686bb7d41932fc9bdcd050ab",
         "GUID:ad47d37b55b3cfa4ba4960d7128606d5",
-        "GUID:36493f3be0b85d94f80c3409db6f29d6"
+        "GUID:36493f3be0b85d94f80c3409db6f29d6",
+        "GUID:a9420e37d7990b54abdef6688edbe313"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
